--- a/src/App.css
+++ b/src/App.css
@@ -14,15 +14,25 @@
 }
 
 .App-header {
-  background-color: #282c34;
-  min-height: 100vh;
+  /* background-color: #282c34; */
+  /* min-height: 100vh; */
   display: flex;
   flex-direction: column;
   align-items: center;
   justify-content: center;
   font-size: calc(10px + 2vmin);
-  color: white;
+  /* color: white; */
 }
+.table{
+  width: 70%;
+  border: 2px solid black;
+  padding: 15px;
+}
+
+th, td {
+  padding: 15px;
+}
+
 
 .App-link {
   color: #61dafb;
